--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <title>Mini Damas</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" href="src/img/icon.png">
     <link rel="stylesheet" type="text/css" href="src/styles/styles.css">
     <link rel="stylesheet" type="text/css" href="src/styles/boardStyles.css">
     <link rel="stylesheet" type="text/css" href="src/styles/modal.css">
@@ -16,10 +14,8 @@
     <script type="text/javascript" src="src/scripts/modalMessage.js" async></script>
     <script type="text/javascript" src="src/scripts/storage.js" async></script>
     <script type="text/javascript" src="src/scripts/move.js" async></script>
-    <script type="text/javascript" src="src/scripts/modal.js" async></script>
     <script type="text/javascript" src="src/scripts/app.js" async></script>
 </head>
-
 <body>
     <nav class="nav-bar">
         <div class="container">
@@ -35,7 +31,6 @@
             </div>
         </div>
     </nav>
-
     <div class="container main">
         <div id="boardContainer">
             <div id="turnText">
@@ -72,7 +67,6 @@
                 </button>
             </div>
         </div>
-
         <div class="description">
             <p>
                 Las <strong>damas</strong> es un juego de mesa para dos personas en un tablero de 64 cuadros. El
@@ -86,7 +80,26 @@
             </p>
         </div>
     </div>
-
+    <div id="contactModal" class="modal">
+        <div class="modal-content">
+            <form id="form-modal">
+                <div class="modal-header">
+                    <span id="closeModal" class="close">&times;</span>
+                    <h3>Formulario de contacto</h3>
+                </div>
+                <div class="modal-body">
+                    <input type="text" placeholder="Nombre" class="nombre inputForm" size="5" id="nombre">
+                    <input type="text" placeholder="Apellido" class="apellido inputForm" id="apellido">
+                    <input type="email" placeholder="Email" class="email inputForm" id="email">
+                    <textarea placeholder="Comentarios... (máximo 250 palabras)" maxlength="250" name="comentarios"
+                        id="coments" cols="30" rows="10" class="coment"></textarea>
+                </div>
+                <div class="modal-footer">
+                    <input type="submit" class="button" id="sendButton" value="Enviar">
+                </div>
+            </form>
+        </div>
+    </div>
     <div id="modal-players" class="modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -102,7 +115,6 @@
             </div>
         </div>
     </div>
-
     <div id="modal-score-board" class="modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -131,7 +143,6 @@
             </div>
         </div>
     </div>
-
     <div id="message-modal" class="modal">
         <div id="message-modal-content" class="modal-content">
             <div class="modal-header">
@@ -140,6 +151,7 @@
             </div>
             <div class="modal-body">
                 <h2 id="message-body">
+    
                 </h2>
             </div>
             <div class="modal-footer">
