--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="src/scripts/modalScoreBoard.js" async></script>
     <script type="text/javascript" src="src/scripts/modalNewGame.js" async></script>
     <script type="text/javascript" src="src/scripts/modalMessage.js" async></script>
+    <script type="text/javascript" src="src/scripts/modalContact.js" async></script>
     <script type="text/javascript" src="src/scripts/storage.js" async></script>
     <script type="text/javascript" src="src/scripts/move.js" async></script>
     <script type="text/javascript" src="src/scripts/app.js" async></script>
@@ -26,6 +27,9 @@
                     </li>
                     <li class="menu-item">
                         <a class="menu-link" id="board-score-button" href="javascript:void(0);">Tablero</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" id="contact" href="javascript:void(0);">Contacto</a>
                     </li>
                 </ul>
             </div>
