--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <li class="menu-item">
                         <a class="menu-link" id="contact" href="javascript:void(0);">Contacto</a>
                     </li>
+                    <li class="menu-item">
+                        <a class="menu-link" id="contact" href="https://github.com/AgustinBaezRep/FinalLPPA">GitHUb</a>
+                    </li>
                 </ul>
             </div>
         </div>
